# qa_guru_python_13_16

./: pyproject.toml
poetry_project/: pyproject.toml
